added comment feature....

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                 </div>
 
                 <ul class="nav_ul">
-                    <li class="nav_li"><a href="">Home</a></li>
-                    <li class="nav_li"><a>Tutorial</a></li>
-                    <li class="nav_li"><a>Notes</a></li>
-                    <li class="nav_li"><a>Contact</a></li>
+                    <li class="nav_li"><a href="http://127.0.0.1:3000/index.html" style="text-decoration:none">Home</a></li>
+                    <li class="nav_li"><a href="http://127.0.0.1:3000/comment.html" style="text-decoration:none">Discussions</a></li>
+                    <li class="nav_li feature1"><a>Notes</a></li>
+                    <li class="nav_li feature2"><a>Contact</a></li>
                 </ul>
             </nav>
 
@@ -72,8 +72,8 @@
                     Account Settings
                 </div>
                 <div class="account_nav">
-                    <div class="login_nav"> <a href="http://localhost:3000/views/login">Login</a></div>
-                    <div class="login_nav"> Sign Up</div>
+                    <div class="login_nav"> <a href="http://127.0.0:3000/views/login" style="text-decoration:none">Login</a></div>
+                    <div class="login_nav"> <a href="http://127.0.0:3000/views/register.ejs" style="text-decoration:none">Sign Up</a> </div>
                 </div>
             </div>
 
@@ -120,7 +120,7 @@
                         countless software applications. Its syntax, though concise, allows for low-level memory
                         manipulation, offering programmers unparalleled control over system resources</p>
                     <div class="goto">
-                        <a href="https://en.wikipedia.org/wiki/C_(programming_language)">Go to the website</a>
+                        <a href="https://en.wikipedia.org/wiki/C_(programming_language)" style="text-decoration:none">Go to the website</a>
                         <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                         abstractions, making it suitable for a wide range of applications, from system software to game
                         development</p>
                     <div class="goto">
-                        <a href="https://en.wikipedia.org/wiki/C%2B%2B">Go to the website</a>
+                        <a href="https://en.wikipedia.org/wiki/C%2B%2B" style="text-decoration:none">Go to the website</a>
                         <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                         technologies, C# continues to be a popular choice for developers aiming to create efficient and
                         scalable solutions</p>
                     <div class="goto">
-                        <a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)">Go to the website</a>
+                        <a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" style="text-decoration:none">Go to the website</a>
                         <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                         devices. With its object-oriented approach, Java simplifies complex coding tasks and promotes
                         code reusability</p>
                     <div class="goto">
-                        <a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Go to the website</a>
+                        <a href="https://en.wikipedia.org/wiki/Java_(programming_language)" style="text-decoration:none">Go to the website</a>
                         <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
@@ -177,7 +177,7 @@
                         support and a thriving community contribute to Python's reputation as a powerful tool for
                         building a wide range of applications</p>
                     <div class="goto">
-                        <a href="https://www.python.org/about/gettingstarted/">Go to the website</a>
+                        <a href="https://www.python.org/about/gettingstarted/" style="text-decoration:none">Go to the website</a>
                         <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
@@ -190,7 +190,7 @@
                         within HTML, facilitating the execution of server-side tasks such as handling forms, managing
                         databases, and generating dynamic content</p>
                     <div class="goto">
-                        <a href="https://en.wikipedia.org/wiki/PHP">Go to the website</a>
+                        <a href="https://en.wikipedia.org/wiki/PHP" style="text-decoration:none">Go to the website</a>
                         <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
@@ -206,7 +206,7 @@
                         system, where various tags define the structure and elements of a webpage, such as headings,
                         paragraphs, images, and links</p>
                     <div class="goto">
-                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">Go to the website</a>
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" style="text-decoration:none">Go to the website</a>
                         <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
@@ -219,7 +219,7 @@
                         experience. CSS operates through a rule-based system, where selectors define the HTML elements
                         to be styled, and declarations specify the desired visual properties</p>
                     <div class="goto">
-                        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS">Go to the website</a>
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" style="text-decoration:none">Go to the website</a>
                         <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                         integral part of modern web applications, facilitating features such as form validation,
                         asynchronous updates, and interactive user interfaces</p>
                     <div class="goto">
-                        <a href="https://developer.mozilla.org/en-US/docs/Web/javascript">Go to the website</a>
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/javascript" style="text-decoration:none">Go to the website</a>
                         <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
