Excess folders have been removed

--- a/comment.html
+++ b/comment.html
@@ -53,7 +53,7 @@
                 </div>
 
                 <ul class="nav_ul">
-                    <li class="nav_li"><a href="http://127.0.0.1:3000/index.html" style="text-decoration:none">Home</a></li>
+                    <li class="nav_li"><a href="http://127.0.0.1:3000/index" style="text-decoration:none">Home</a></li>
                     <li class="nav_li"><a href="" style="text-decoration:none">Discussions</a></li>
                     <li class="nav_li feature1"><a>Notes</a></li>
                     <li class="nav_li feature2"><a>Contact</a></li>
