--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 </div>
 
                 <ul class="nav_ul">
-                    <li class="nav_li"><a href="http://127.0.0.1:3000/index.html" style="text-decoration:none">Home</a></li>
-                    <li class="nav_li"><a href="http://127.0.0.1:3000/comment.html" style="text-decoration:none">Discussions</a></li>
+                    <li class="nav_li"><a href="/index" style="text-decoration:none">Home</a></li>
+                    <li class="nav_li"><a href="/comment" style="text-decoration:none">Discussions</a></li>
                     <li class="nav_li feature1"><a>Notes</a></li>
                     <li class="nav_li feature2"><a>Contact</a></li>
                 </ul>
@@ -121,7 +121,7 @@
                         manipulation, offering programmers unparalleled control over system resources</p>
                     <div class="goto">
                         <a href="https://en.wikipedia.org/wiki/C_(programming_language)" style="text-decoration:none">Go to the website</a>
-                        <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
+                        <img src="assets_of_page/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
                 <div class="elements web">
@@ -135,7 +135,7 @@
                         development</p>
                     <div class="goto">
                         <a href="https://en.wikipedia.org/wiki/C%2B%2B" style="text-decoration:none">Go to the website</a>
-                        <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
+                        <img src="assets_of_page/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
                 <div class="elements dsa">
@@ -149,7 +149,7 @@
                         scalable solutions</p>
                     <div class="goto">
                         <a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" style="text-decoration:none">Go to the website</a>
-                        <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
+                        <img src="assets_of_page/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
 
@@ -164,7 +164,7 @@
                         code reusability</p>
                     <div class="goto">
                         <a href="https://en.wikipedia.org/wiki/Java_(programming_language)" style="text-decoration:none">Go to the website</a>
-                        <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
+                        <img src="assets_of_page/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
                 <div class="elements cpp">
@@ -178,7 +178,7 @@
                         building a wide range of applications</p>
                     <div class="goto">
                         <a href="https://www.python.org/about/gettingstarted/" style="text-decoration:none">Go to the website</a>
-                        <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
+                        <img src="assets_of_page/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
                 <div class="elements python">
@@ -191,7 +191,7 @@
                         databases, and generating dynamic content</p>
                     <div class="goto">
                         <a href="https://en.wikipedia.org/wiki/PHP" style="text-decoration:none">Go to the website</a>
-                        <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
+                        <img src="assets_of_page/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
 
@@ -207,7 +207,7 @@
                         paragraphs, images, and links</p>
                     <div class="goto">
                         <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" style="text-decoration:none">Go to the website</a>
-                        <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
+                        <img src="assets_of_page/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
                 <div class="elements sql">
@@ -220,7 +220,7 @@
                         to be styled, and declarations specify the desired visual properties</p>
                     <div class="goto">
                         <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" style="text-decoration:none">Go to the website</a>
-                        <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
+                        <img src="assets_of_page/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
                 <div class="elements Git">
@@ -233,7 +233,7 @@
                         asynchronous updates, and interactive user interfaces</p>
                     <div class="goto">
                         <a href="https://developer.mozilla.org/en-US/docs/Web/javascript" style="text-decoration:none">Go to the website</a>
-                        <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
+                        <img src="assets_of_page/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
 
